--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "html-webpack-plugin": "^5.6.0",
     "serve": "^14.2.3",
     "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^6.0.1"
   }
 }
